--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -535,6 +535,7 @@ td .popover button{
 
 .award-new {
   padding-top: 8px;
+  padding-bottom: 8px;
   float: left;
   width: 150px;
   height: 150px;
