--- a/arability/app/views/games/_get_trophies.html.erb
+++ b/arability/app/views/games/_get_trophies.html.erb
@@ -2,21 +2,17 @@
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 </script>
 <div class="award-zone" >
-  <div class="won">
+  <div class="won" style="padding-bottom:0px;">
     <% arabic_class = "pull-left btn btn-success" %>
     <% english_class = "pull-right btn btn-success" %>
     <% english_style = "padding: 5px; margin-right: 12px; margin-top: 28px;" %>
     <% arabic_style = "padding: 5px; margin-left:28px; margin-top: 28px;" %>
-    <% if @bool_won_prizes %>
-      <a class="<%= I18n.locale == :en ? english_class : arabic_class %>" style="<%= I18n.locale == :en ? english_style : arabic_style %>" onclick="getPrizes(<%= @level %>, <%= @score %>)"><%= t(:to_prizes) %></a>
-    <% else %>
-      <a class="<%= I18n.locale == :en ? english_class : arabic_class %>" style="<%= I18n.locale == :en ? english_style : arabic_style %>" onclick="nextLevel()"><%= t(:to_next_level) %></a>
-    <% end %>
-    <h3 class="title-head"><%= t(:you_have_score) %><br><br> <%= @score %><br><br><%= t(:share_your_score) %><br><br><a href="https://twitter.com/share" class="twitter-share-button" data-text="لقد حصلت على <%= @score %> نقطة" data-via="SmartSoft2013">Tweet</a><br><a style="margin-left: -24px" target="_blank" href="/share_on_facebook/?score=<%= @score %>  "><img src="/assets/fb.png"></a></h3>
+    <a class="<%= I18n.locale == :en ? english_class : arabic_class %>" style="<%= I18n.locale == :en ? english_style : arabic_style %>" onclick="nextLevel()"><%= t(:to_next_level) %></a>
+    <h3 class="title-head"><br><div style="margin-bottom: 10px;"><%= t(:you_have_score) %></div><div style="margin-bottom: 15px;"><%= @score %></div><%= t(:share_your_score) %><br><a href="https://twitter.com/share" class="twitter-share-button" data-text="لقد حصلت على <%= @score %> نقطة" data-via="SmartSoft2013">Tweet</a><a style="margin-left: -24px" target="_blank" href="/share_on_facebook/?score=<%= @score %>  "><img src="/assets/fb.png"></a></h3>
   </div>
   <% if !@won_trophies.blank? %>
   <div class="won">
-    <h3 class="title-head" style="border-top: none;"><%= t(:you_have_won_these_trophies) %></h3>
+    <h3 class="title-head" style="border-top: none;"><%= t(:congrats_you_won) %></h3>
      <% @won_trophies.each do |trophy| %>
           <div class="award-new">
             <div class="award-image">
@@ -34,6 +30,26 @@
               <%= t(:score) %> <%= trophy.score %>
             </div>
           </div>
-      <% end %>
+        <% end %>
+        <% if !@won_prizes.blank? %>
+         <% @won_prizes.each do |prize| %>
+            <div class="award-new">
+              <div class="award-image">
+                <center>
+                  <img src="<%= prize.image %>" width="60" height="60"/>
+                </center>
+              </div>
+              <div class="award-new-name">
+                <%= prize.name %>
+              </div>
+              <div class="award-new-req">
+                <%= t(:level) %> <%= prize.level %>
+              </div>
+              <div class="award-new-req">
+                <%= t(:score) %> <%= prize.score %>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
   <% end %>
 </div>
