fixed code conventions

--- a/arability/app/views/admin/list_admins.html.erb
+++ b/arability/app/views/admin/list_admins.html.erb
@@ -8,7 +8,7 @@
 						<div class="pull-left pagination">
 							<%= paginate @list, :remote => true %>
 						</div>
-							عرض المشرفيين
+						عرض المشرفيين
 					</legend>
 					<% if flash[:success] %>
 						<div class="alert alert-success">
@@ -30,21 +30,24 @@
 							<% for item in @list %>
 								<div id="myModal<%= item.id %>" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 						            <div class="modal-header">
-						              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-						              <h3 id="myModalLabel">تأكيد المسح</h3>
+						              	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						              	<h3 id="myModalLabel">تأكيد المسح</h3>
 						            </div>
 						            <div class="modal-body">
-						              <p>هل أنت متأكد من مسح المشرف</p><strong><%= item.username %></strong>
+						              	<p>هل أنت متأكد من مسح المشرف</p>
+						              	<strong><%= item.username %></strong>
 						            </div>
 						            <div class="modal-footer">
-						              <button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
-						              <a class="btn btn-warning" href="/admin/remove_admin?id=<%= item.id %>">مسح</a>
+						              	<button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
+						              	<a class="btn btn-warning" href="/admin/remove_admin?id=<%= item.id %>">مسح</a>
 						            </div>
-						          </div>
+						        </div>
 								<tr>
 									<td><%= item.username %></td>
 									<td><%= item.email %></td>
-									<td><a href="#myModal<%= item.id %>" data-toggle="modal">مسح</a></td>
+									<td>
+										<a href="#myModal<%= item.id %>" data-toggle="modal">مسح</a>
+									</td>
 								</tr>
 							<% end %>
 						</tbody>
