--- a/arability/app/views/devise/registrations/edit.html.erb
+++ b/arability/app/views/devise/registrations/edit.html.erb
@@ -9,7 +9,10 @@
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t(:my_info)%></a></li>
     <li><a href="#tab2" data-toggle="tab"><%= t(:social_media)%></a></li>
+    <% @developer = Developer.find_by_gamer_id(current_gamer.id)%>
+    <% if @developer != nil %>
     <li><a href="#tab3" data-toggle="tab"><%= t(:choose_sub)%></a></li>
+    <% end %>
   </ul>
   <div class="tab-content" style="width:1200px;">
     <div class="tab-pane active" id="tab1">
@@ -179,7 +182,14 @@
 <div style = "width:1000px; margin: 0 auto;">
 <table>
     <tr>
+     <% if I18n.locale==:en %>
+       <span>your current subscription model is <%= developer.my_subscription.subscription_model.name_en%></span> 
+      <%else%>
+       <span>نظامك الحالى هو <%= developer.my_subscription.subscription_model.name_ar%></span>
+      <%end%>
+    </br>
 <% SubscriptionModel.all.each do |sm| %>
+
   <%if(developer.my_subscription)
     selected_sub_id = developer.my_subscription.subscription_model_id
   else
