fixed scenario stuff

--- a/arability/app/views/admin/list_admins.html.erb
+++ b/arability/app/views/admin/list_admins.html.erb
@@ -39,7 +39,7 @@
 						            </div>
 						            <div class="modal-footer">
 						              	<button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
-						              	<a class="btn btn-warning" href="/admin/remove_admin?id=<%= item.id %>">مسح</a>
+						              	<a class="btn btn-danger" href="/admin/remove_admin?id=<%= item.id %>">مسح</a>
 						            </div>
 						        </div>
 								<tr>
