--- a/arability/app/views/admin/list_trophies.html.erb
+++ b/arability/app/views/admin/list_trophies.html.erb
@@ -15,7 +15,7 @@
             </div>
             <div class="modal-footer">
               <button class="btn" data-dismiss="modal" aria-hidden="true">غلق</button>
-              <a class="btn btn-warning">مسح</a>
+              <a class="btn btn-danger">مسح</a>
             </div>
           </div>
           <legend>
