[Issue #363] fixed scenario comments

--- a/arability/app/views/api/_script.js.erb
+++ b/arability/app/views/api/_script.js.erb
@@ -1,7 +1,7 @@
 (function($) {
   $.arabize = function (options) {
     if(!options || !options["api_key"]) {
-      $.error("Api key not passed to arabize")
+      $.error("API key not passed to arabize")
     }
 
     var set_translation_for_element = function (element, translation) {
