--- a/arability/app/views/api/test.html.erb
+++ b/arability/app/views/api/test.html.erb
@@ -19,7 +19,7 @@
     </div>
   </form>
 </span>
+<script src="http://localhost:3000/developers/api/arabize.js"></script>
 <script>
-  <%= render "script.js" %>
-  $.arabize({ api_key: "a6b0325b42d263376abdf8f9fb81ae36" })
+    $.arabize({ api_key: "a6b0325b42d263376abdf8f9fb81ae36" })
 </script>
