--- a/arability/app/views/api/help.html.erb
+++ b/arability/app/views/api/help.html.erb
@@ -6,14 +6,14 @@
 <span style="direction: ltr; font-size:14px; text-align: left">
 <%= link_to "<< Back to your APIs", api_keys_list_path %>
 <div class="page-header">
-  <h1>API help</h1>
+  <h1>API documentation</h1>
 </div>
 
 <h3>Adding the API to your website</h3>
 <p>
   To arabize keywords in your website you can place this piece of code anywhere in your
   html. If you dont have an api key you can get one from
-  <%= link_to "here", api_keys_list_path %>
+  <%= link_to "here", api_keys_list_path %>.
 </p>
 <pre>
 &lt;script src=&quot;http://localhost:3000/api/arabize.js&quot;&gt;&lt;/script&gt;
