--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -640,6 +640,7 @@ td .popover button{
   line-height: 40px;
   margin-right: auto;
   margin-left: auto;
+  margin-bottom: 14px;
   padding-top: 4px;
   padding-bottom: 4px;
   padding-right: 12px;
