--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
                 <% if I18n.locale == :ar %>
                 <div><%= f.check_box :remember_me, :class => "pull-right" %> <%= label_tag :remember_me, t(:remember_me), :class => "pull-right", style: "color:white;margin-right: 10px;" %></div>
                 <br /><br />
-                <%= link_to t(:forgot_password), new_password_path(Gamer), :style => "margin-top: -14px; color:white;", class: "pull-right" %><br />
+                <%= link_to t(:forgot_password), new_password_path(Gamer), :style => "margin-top: -14px; color:white; margin-right: -18px;", class: "pull-right" %><br />
                 <%= f.submit t(:sign_in), style: "clear: left; width: 100%; height: 32px; font-size: 16px;", class: "btn btn-primary" %>
                 <% else %>
                 <div><%= f.check_box :remember_me, :class => "pull-left" %> <%= label_tag :remember_me, t(:remember_me), :class => "pull-left", style: "margin-left: 10px; color:white;" %></div>
