--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -252,7 +252,7 @@ function setButtons(){
   }
 
   function showProfile(){
-    show_menu_item('<%= t(:profile) %>');
+    show_menu_item('<%= t(:vote) %>');
     if(cache == "") {
       cache = document.getElementById("zone").innerHTML;
     } 
@@ -302,15 +302,15 @@ function setButtons(){
 </script>
 <% if I18n.locale==:ar %>
 <div class="game-zone">
-  <div class="game-nav">
+  <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width : 110px; height: 50px; margin-top:15px; border: medium none;"><i class="icon-list"></i>
+       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width: 110px; height: 50px; border: medium none; margin-right: 15px; margin-top: 10px;"><i class="icon-list"></i>
         <span class="noha" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu" style="margin-top: -5px; margin-right: 12px;">
          <li><a href="#"onclick="hallOfFame()">
               <span>الرتبة</span>
              </a></li>
@@ -321,11 +321,7 @@ function setButtons(){
                 الإنجازات
               </a></li>
          <li><a href="#" onclick="showProfile()">
-          بروفيل
-             </a>
-         </li>
-         <li><a href="#">
-              إعدادات
+          اصوات
              </a>
          </li>
          <li> <a href="#" onclick="inviteFriends()">
@@ -338,41 +334,38 @@ function setButtons(){
     <% end %>
   </div>
   <% else I18n.locale==:en %>
-  <div class="game-zone">
- 
+  <div class="game-zone" style="text-align:left;">
+   <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width : 110px; height: 50px; margin-top:15px; border: medium none;"><i class="icon-list"></i>
+       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width : 110px; height: 50px; margin-top:15px; border: medium none; margin-left: 20px;"><i class="icon-list"></i>
         <span class="noha" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
-        <ul class="dropdown-menu">
-         <li><a href="#"onclick="hallOfFame()">
-              <span>Rank</span>
+        <ul class="dropdown-menu" style="margin-left: 20px;">
+         <li ><a href="#"onclick="hallOfFame()">
+              <span style="margin-right: 90px;">Rank</span>
              </a></li>
          <li><a href="#" onclick="showPrizes()">
-             Prizes
+             <span style="margin-right: 90px;">Prizes</span>
           </a></li>
          <li> <a href="#" onclick="showTrophies()">
-                Trophies
+                <span style="margin-right: 90px;">Trophies</span>
               </a></li>
          <li><a href="#" onclick="showProfile()">
-          Profile
-             </a>
-         </li>
-         <li><a href="#">
-             Invitations
+          <span style="margin-right: 90px;">Votes</span>
              </a>
          </li>
          <li> <a href="#" onclick="inviteFriends()">
-              Invitations
+              <span style="margin-right: 90px;">Invitations</span>
          </a>
           </li>
         </ul>
         
     </div>
     <% end %>
+  </div>
   
   <%end%>
  
