--- a/arability/app/views/projects/share.html.erb
+++ b/arability/app/views/projects/share.html.erb
@@ -1,4 +1,4 @@
-<%= link_to t(:back_share), projects_path() %>
+<%= link_to t(:back_to_project), projects_path() %>
 <div class="well" style="height:500px;">
 	<%= form_for @project, :url => "/developers/projects/share_project_with_developer" do |f| %>
   <%= hidden_field_tag "id", @project.id%>
