--- a/arability/app/views/admin/list_admins.html.erb
+++ b/arability/app/views/admin/list_admins.html.erb
@@ -27,7 +27,7 @@
 					  	</div>
 					<% end %>
 					<% if @list.length-1 == 0 %>
-						<h3>عفون لا يوجد مشرفيين غيرك</h3>
+						لا يوجد مشرفيين غيرك
 					<% else %>
 					<table class="table table-bordered table-hover">
 						<thead>
