--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -219,7 +219,7 @@ function setButtons(){
     var item_html = '<h3 style="margin-top: -50px; font-size: 40px;"> \
     ' + title + ' \
     </h3>';
-    $(".btn-group span.noha").text(title);
+    $(".btn-group span.new").text(title);
     //$(".btn-group span.caret").html(item_html);
 
 
@@ -307,8 +307,8 @@ function setButtons(){
   <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width: 110px; height: 50px; border: medium none; margin-right: 15px; margin-top: 10px;"><i class="icon-list"></i>
-        <span class="noha" style="font-size :20px;"><%= t(:menu) %></span>
+       <button type="submit" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width: 110px; height: 50px; border: medium none; margin-right: 15px; margin-top: 10px;"><i class="icon-align-justify"></i>
+        <span class="new" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
@@ -340,8 +340,8 @@ function setButtons(){
    <div class="game-nav" style="background-color: rgb(81, 104, 124); margin-bottom: -10px;">
     <% if current_gamer != nil %>
     <div class="btn-group" style="height: 66px;">
-       <button type="submit" class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="width : 110px; height: 50px; margin-top:15px; border: medium none; margin-left: 20px;"><i class="icon-list"></i>
-        <span class="noha" style="font-size :20px;"><%= t(:menu) %></span>
+       <button type="submit" class="btn btn-info dropdown-toggle" data-toggle="dropdown" href="#" style="width : 110px; height: 50px; margin-top:15px; border: medium none; margin-left: 20px;"><i class="icon-align-justify"></i>
+        <span class="new" style="font-size :20px;"><%= t(:menu) %></span>
         
        </button>
         <center id="selected_item"></center>
