--- a/arability/app/views/games/_alert.html.erb
+++ b/arability/app/views/games/_alert.html.erb
@@ -1,4 +1,4 @@
-<div class="alert alert-success">
+<div id="facebook_messages" class="alert alert-success">
     <button type = "button" class = "close" data-dismiss = "alert">&times;</button>
     <div> 
     	<%= @message %> 
@@ -7,3 +7,8 @@
     	<% end %>
 	</div>
 </div>
+<script type="text/javascript">
+	setTimeout(function(){
+		$("#facebook_messages").fadeOut(1000)
+	}, 5000)
+</script>
