--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -692,6 +692,26 @@ td .popover button{
   background-color: rgba(203,58,77,0.5);
 }
 
+.none-green {
+  width: 700px;
+  font-size: 190%;
+  line-height: 40px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 14px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 12px;
+  padding-left: 12px;
+  text-align: center;
+  border-radius: 10px;
+  background-color:rgba(179,210,121,0.3);
+}
+
+.none-green:hover {
+  background-color: rgba(179,210,121,0.5);
+}
+
 // start of vote log view styling
 .main-div-vl {
   text-align: center;
