--- a/arability/app/views/games/_show_trophies.html.erb
+++ b/arability/app/views/games/_show_trophies.html.erb
@@ -35,12 +35,12 @@
   <div class="not-won">
     <h3 class="title-head"><%= t(:not_won_trophies_title) %></h3>
     <% if @not_won_trophies.blank? %>
-    <div class="none">
+    <div class="none-green">
       <%= t(:all_trophies) %>
     </div>
     <% else %>
       <% @not_won_trophies.each do |trophy| %>
-        <div class="award-new-not">
+        <div class="award-new">
           <div class="award-image">
             <center>
               <img src="<%= trophy.image %>" width="60" height="60"/>
